<?xml version = "1.0" encoding = "utf-8"?>
<resources>

    <string name="app_name">barcode scanner</string>
    <string name="show_name">条码扫描v1.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_1d">barcode modules set</string>
    <string name="action_reset">Restore Factory Settings</string>
    <string name="action_reset_desc">reset all settings to factory state, clearing the user to set parameters</string>
    <string name="action_datatype">Setting Data Format</string>
    <string name="action_datatype_desc">Set the data format is: barcode data + carriage return line, to facilitate data analysis</string>
    <string name="action_encodingtype">Encoding Type</string>
    <string name="action_encodingtype_desc">Set the qr code decoding encoding type</string>
    <string name="action_encoding_tip">Please select a code type</string>
    <string name="action_setsuccess">Settings success</string>
    <string name="action_2d">Qr modules set</string>
    <string name="exit">Exit</string>
    <string name="open_scan">Scan</string>
    <string name="empty">Empty</string>
    <string name="popup_title">Select</string>
    <string name="popup_message">Device quit, you have to exit the application do?</string>
    <string name="popup_yes">OK</string>
    <string name="popup_no">Cancel</string>
    <string name="conn_state">网络连接状态为：</string>
    <string name="blank"> </string>
    <string name="code_result">条码值</string>
    <string name="img">image description</string>
    <string name="scan">扫描</string>
    <string name="clear">清空</string>
    <string name="back">退出</string>
    <string name="sendemail">发送邮件</string>
    <string name="rebuildsheet">新建批次</string>
    <string name="batchshow">批次管理</string>
    <string name="localdb">本地数据库</string>
    <string name="dbname">数据库ldm_family</string>
    <string name="dbclear">清空数据库</string>
    <string name="dbquery">查询结果</string>
    <string name="hintstart">开始时间</string>
    <string name="hintstop">结束时间</string>
    <string name="showdetail">状态显示</string>
    <string name="query_1">仅查询结果</string>
    <string name="query_2">查询结果并存储</string>
    <string name="query_3">发送查询结果</string>
    <string name="query_4">批次查询并存储</string>
    <string name="query_5">批次撤销</string>
    <string name="addmember">添加</string>
    <string name="deletemember">删除</string>
    <string name="clearmember">清空</string>
    <string name="save">保存</string>
    <string name="quit">取消</string>
    <string name="configuration">全局设置</string>
    <string name="memberlist">收件人列表:</string>
    <string name="deletelocationmember">输入要删除的联系人标号:</string>
    <string name="batch">xxx</string>
    <string name="con">批次本机已扫描:</string>
    <string name="count">0</string>
    <string name="batchlist">批次信息</string>
    <string name="batchname">批次名称</string>
    <string name="batchsize">总数量</string>
    <string name="batchflag">已完成</string>
    <string name="changesize">修改批次数量</string>
    <string name="newbatch">输入新批次名称</string>
    <string name="newsize">输入新批次机器总量</string>
    <string name="scansum">已扫描总数量为:</string>
    <string name="btnbatch">批次</string>
    <string name="btncomplete">完成</string>
    <string name="btnoutbound">出库</string>
    <string name="btnrevocation">撤销</string>
    <string name="input">手动输入</string>
    <string name="unlock">解除锁定</string>
    <string name="jdtquery">内网扫描模式</string>
    <string name="soapquery">外网扫描模式</string>

</resources>
