<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bga"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dbname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:text="@string/dbname" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="280dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

       <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/k"
            android:text="@string/hintstart"/>



        <TextView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/k"
            android:text="@string/hintstop"/>
       
    </LinearLayout>

    <TextView
        android:id="@+id/tvshowdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:text="@string/showdetail" />

    <Button
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/dbquery" />
    
     <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/dbclear" />

</LinearLayout>