<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="16dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/exit" />

        <Button
            android:id="@+id/btnOpen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnEdit"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="28dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/open_scan" />

        <Button
            android:id="@+id/emptyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnOpen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/empty" />

      

    </RelativeLayout>

</LinearLayout>